--- a/package.json
+++ b/package.json
@@ -1,23 +1,44 @@
 {
-  "name": "multi-sig-oracle-client",
-  "version": "1.0.0",
-  "scripts": {
-    "build:ui": "NODE_ENV=development npx vite build -c vite.config.js",
-    "dev:ui": "npx vite -c vite.config.js --host"
-  },
-  "type": "module",
-  "author": "Christian Schmitz",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.4",
-    "babel-plugin-styled-components": "^2.1.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-use-websocket": "^4.11.1",
-    "styled-components": "^6.1.13",
-    "typescript": "^5.7.2",
-    "vite": "^6.0.2"
-  }
+    "name": "multi-sig-oracle-client",
+    "version": "1.0.0",
+    "scripts": {
+        "build": "npm run build:ui && npm run build:worker",
+        "build:ui": "NODE_ENV=development npx vite build -c vite.config.js",
+        "build:worker": "node esbuild.worker.js",
+        "dev:ui": "npx vite -c vite.config.js --host",
+        "prettify": "npx prettier . --write",
+        "test:types": "npx tsc --noEmit"
+    },
+    "type": "module",
+    "author": "Christian Schmitz",
+    "license": "ISC",
+    "prettier": {
+        "trailingComma": "none",
+        "tabWidth": 4,
+        "semi": false,
+        "singleQuote": false
+    },
+    "devDependencies": {
+        "@helios-lang/cbor": "^0.2.2",
+        "@helios-lang/codec-utils": "^0.3.1",
+        "@helios-lang/ledger": "^0.6.6",
+        "@helios-lang/tx-utils": "^0.3.2",
+        "@reduxjs/toolkit": "^2.4.0",
+        "@tanstack/react-query": "^5.62.2",
+        "@types/react": "^18.3.12",
+        "@types/react-dom": "^18.3.1",
+        "@types/react-redux": "^7.1.34",
+        "@vitejs/plugin-react": "^4.3.4",
+        "babel-plugin-styled-components": "^2.1.4",
+        "esbuild": "^0.24.0",
+        "prettier": "^3.4.2",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-redux": "^9.1.2",
+        "react-use-websocket": "^4.11.1",
+        "redux-persist": "^6.0.0",
+        "styled-components": "^6.1.13",
+        "typescript": "^5.7.2",
+        "vite": "^6.0.2"
+    }
 }
