--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
             "src": ["./src"]
         },
         "target": "ESNext",
-        "lib": ["DOM", "DOM.Iterable", "ESNext"],
+        "lib": ["DOM", "DOM.Iterable", "WebWorker", "ESNext"],
         "module": "ESNext",
         "skipLibCheck": true,
 
@@ -25,8 +25,6 @@
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true
     },
-    "include": [
-        "src"
-    ],
+    "include": ["src"],
     "exclude": ["node_modules", "dist"]
 }
