--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
         "@helios-lang/cbor": "^0.2.2",
         "@helios-lang/codec-utils": "^0.3.1",
         "@helios-lang/ledger": "^0.6.13",
-        "@helios-lang/minswap": "^0.1.7",
-        "@helios-lang/tx-utils": "^0.3.14",
+        "@helios-lang/minswap": "^0.1.8",
+        "@helios-lang/tx-utils": "^0.3.15",
         "@helios-lang/type-utils": "^0.2.8",
         "@helios-lang/uplc": "^0.7.8",
+        "@helios-lang/utxorpc": "^0.1.1",
         "@tanstack/react-query": "^5.62.2",
         "@types/node": "^22.10.2",
         "@types/react": "^18.3.12",
