--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@types/react-redux": "^7.1.34",
         "@vitejs/plugin-react": "^4.3.4",
         "babel-plugin-styled-components": "^2.1.4",
+        "bowser": "^2.11.0",
         "esbuild": "^0.24.0",
         "prettier": "^3.4.2",
         "react": "^18.3.1",
