--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@helios-lang/tx-utils": "^0.6.1",
         "@helios-lang/type-utils": "^0.2.9",
         "@helios-lang/uplc": "^0.7.11",
+        "@safe-global/sdk-starter-kit": "^2.0.1",
         "@tanstack/react-query": "^5.62.2",
         "@types/node": "^22.10.2",
         "@types/react": "^18.3.12",
@@ -36,7 +37,9 @@
         "@vitejs/plugin-react": "^4.3.4",
         "babel-plugin-styled-components": "^2.1.4",
         "bowser": "^2.11.0",
+        "buffer": "^6.0.3",
         "esbuild": "^0.24.0",
+        "ethers": "^6.13.5",
         "prettier": "^3.4.2",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
