App polls endpoint at 10 seconds interval

--- a/android/Makefile
+++ b/android/Makefile
@@ -1,9 +1,11 @@
 ANDROIDSDK=/usr/lib/android-sdk/build-tools/33.0.1
 PLATFORM=/usr/lib/android-sdk/platforms/android-33/android.jar
-APP=src/pbg/oracle/helloworld
+APP=src/pbg/oracle/app
+CLS=cls/pbg/oracle/app
 NAME=pbg_oracle
 
-CLASSES=$(patsubst %.java,%.class,$(wildcard $(APP)/*.java))
+CLASSES=$(patsubst $(APP)/%.java,$(CLS)/%.class,$(wildcard $(APP)/*.java))
+VERSION=$(git rev-parse --short HEAD)
 
 # Resources:
 # https://www.hanshq.net/command-line-android.html
@@ -20,12 +22,15 @@ $(NAME).aligned.apk: $(NAME).unsigned.apk
 $(NAME).unsigned.apk: dex/classes.dex AndroidManifest.xml
 	aapt package -f -v -F $@ -I $(PLATFORM) -M AndroidManifest.xml -S res dex
 
-dex/classes.dex: $(CLASSES)
+dex/classes.dex: $(CLS)/App.class
 	[ -e dex ] || mkdir dex
-	d8 --output dex $^
+	d8 --output dex $(CLASSES)
 
-$(APP)/HelloWorld.class: $(APP)/*.java $(APP)/R.java
-	javac -bootclasspath $(PLATFORM) -classpath src -source 1.7 -target 1.7 $^
+$(CLS)/App.class: $(APP)/*.java $(APP)/R.java
+	rm -fr cls
+	cp -r src cls
+	sed -i 's/\"development\"/\"${VERSION}\"/' $(CLS)/App.java
+	javac -bootclasspath $(PLATFORM) -classpath cls -source 8 -target 8 $^
 
 $(APP)/R.java: AndroidManifest.xml res/*
 	aapt package -f -m -J src -S res -M AndroidManifest.xml -I $(PLATFORM)
@@ -34,14 +39,17 @@ install: $(NAME).apk
 	adb install $^
 
 clean:
-	rm -vf	$(APP)/R.java \
+	rm -vf $(APP)/R.java \
 		$(APP)/*.class \
+		$(CLS)/*.class \
+		$(CLS)/*.java \
 		*.unsigned.apk \
 		*.aligned.apk \
 		dex/*.dex
 
 distclean: clean
 	[ ! -d dex ] || rmdir dex
+	[ ! -d cls ] || rmdir cls
 	rm -vf *.apk
 
 squeaky-clean: distclean
