--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,15 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
- package="pbg.oracle.helloworld"
- versionCode="0"
- versionName="0">
+<manifest 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    package="pbg.oracle.app"
+    versionCode="0"
+    versionName="0">
     <uses-sdk android:minSdkVersion="19"/>
-    <application android:label="PBG Oracle">
-        <activity android:name=".HelloWorld">
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <application android:label="PBG Oracle">    
+        <activity android:name=".App">
              <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
              </intent-filter>
         </activity>
+
+        <service
+            android:name=".PollingService"
+            android:permission="android.permission.BIND_JOB_SERVICE"
+            android:exported="true" />
     </application>
 </manifest>
