feat: seed generation input

--- a/android/Makefile
+++ b/android/Makefile
@@ -3,6 +3,7 @@ PLATFORM=/usr/lib/android-sdk/platforms/android-33/android.jar
 APP=src/pbg/oracle/app
 CLS=cls/pbg/oracle/app
 NAME=pbg_oracle
+BITCOINJ_LIB=libs/bitcoinj-core-0.15.10.jar
 
 CLASSES=$(patsubst $(APP)/%.java,$(CLS)/%.class,$(wildcard $(APP)/*.java))
 VERSION=$(shell git rev-parse --short HEAD)
@@ -30,10 +31,10 @@ $(CLS)/App.java: $(APP)/*.java $(APP)/R.java
 	rm -fr cls
 	cp -r src cls
 	sed -i 's/\"development\"/\"$(VERSION)\"/' $(CLS)/App.java
-
+ 
 $(CLS)/App.class: $(CLS)/App.java $(CLS)/R.java
-	javac -bootclasspath $(PLATFORM) -classpath cls -source 8 -target 8 $^
-
+	javac -bootclasspath $(PLATFORM) -classpath cls:$(BITCOINJ_LIB) -source 8 -target 8 $^ 
+	
 $(APP)/R.java: AndroidManifest.xml res/*
 	aapt package -f -m -J src -S res -M AndroidManifest.xml -I $(PLATFORM)
 
