--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,24 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest 
+<manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="pbg.oracle.app"
-    versionCode="0"
-    versionName="0">
-    <uses-sdk android:minSdkVersion="19"/>
+    android:versionCode="0"
+    android:versionName="0">
+
+    <uses-sdk android:minSdkVersion="28"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-
-    <application android:label="PBG Oracle">    
-        <activity android:name=".App">
-             <intent-filter>
+    <application
+        android:label="PBG Oracle">
+        <activity
+            android:name=".App"
+            android:exported="true">
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-             </intent-filter>
-        </activity>
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".CreateWallet" />
         <service
             android:name=".PollingService"
             android:permission="android.permission.BIND_JOB_SERVICE"
             android:exported="true" />
     </application>
+
 </manifest>
