--- a/android/.gitignore
+++ b/android/.gitignore
@@ -1,7 +1,15 @@
-*.apk
-*.class
-*.dex
-R.java
-*.idsig
-cls
-dex
+*.iml
+.gradle
+/local.properties
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
+.DS_Store
+/build
+/captures
+.externalNativeBuild
+.cxx
+local.properties
