--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -20,10 +20,10 @@
         </activity>
         <activity android:name=".CreateWallet"
             android:exported="true" />
-        <!-- <service
+        <service
             android:name=".PollingService"
             android:permission="android.permission.BIND_JOB_SERVICE"
-            android:exported="true" /> -->
+            android:exported="true" />
     </application>
 
 </manifest>
