--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -19,3 +19,6 @@ android.useAndroidX=true
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+RELEASE_STORE_PASSWORD=PbG123!@#
+RELEASE_KEY_PASSWORD=PbG123!@#
+RELEASE_KEY_ALIAS=pbg_oracle
