--- a/pwa/package.json
+++ b/pwa/package.json
@@ -25,13 +25,16 @@
         "@aws-sdk/client-lambda": "^3.817.0",
         "@helios-lang/cbor": "^0.3.1",
         "@helios-lang/codec-utils": "^0.3.4",
+        "@helios-lang/contract-utils": "^0.3.21",
         "@helios-lang/crypto": "^0.2.3",
         "@helios-lang/ledger": "^0.7.11",
         "@helios-lang/minswap": "^0.2.1",
+        "@helios-lang/tx-utils": "^0.6.14",
         "@helios-lang/type-utils": "^0.3.0",
         "@helios-lang/uplc": "^0.7.17",
         "@safe-global/sdk-starter-kit": "^2.0.1",
         "@tanstack/react-query": "^5.62.2",
+        "@types/aws-lambda": "^8.10.149",
         "@types/jszip": "^3.4.0",
         "@types/node": "^22.10.2",
         "@types/react": "^18.3.12",
@@ -52,5 +55,8 @@
         "typescript": "^5.7.2",
         "vite": "^6.0.2",
         "vite-plugin-static-copy": "^2.2.0"
+    },
+    "dependencies": {
+        "@pbgtoken/rwa-contract": "^1.0.2"
     }
 }
