--- a/pwa/package.json
+++ b/pwa/package.json
@@ -32,6 +32,7 @@
         "@helios-lang/tx-utils": "^0.6.14",
         "@helios-lang/type-utils": "^0.3.0",
         "@helios-lang/uplc": "^0.7.17",
+        "@pbgtoken/rwa-contract": "^1.1.5",
         "@safe-global/sdk-starter-kit": "^2.0.1",
         "@tanstack/react-query": "^5.62.2",
         "@types/aws-lambda": "^8.10.149",
@@ -55,8 +56,5 @@
         "typescript": "^5.7.2",
         "vite": "^6.0.2",
         "vite-plugin-static-copy": "^2.2.0"
-    },
-    "dependencies": {
-        "@pbgtoken/rwa-contract": "^1.0.3"
     }
 }
