--- a/pwa/package.json
+++ b/pwa/package.json
@@ -27,12 +27,13 @@
         "@helios-lang/codec-utils": "^0.3.4",
         "@helios-lang/contract-utils": "^0.3.21",
         "@helios-lang/crypto": "^0.2.3",
+        "@helios-lang/effect": "^0.1.11",
         "@helios-lang/ledger": "^0.7.11",
         "@helios-lang/minswap": "^0.2.1",
         "@helios-lang/tx-utils": "^0.6.14",
         "@helios-lang/type-utils": "^0.3.0",
         "@helios-lang/uplc": "^0.7.17",
-        "@pbgtoken/rwa-contract": "^1.1.7",
+        "@pbgtoken/rwa-contract": "^1.1.17",
         "@safe-global/sdk-starter-kit": "^2.0.1",
         "@tanstack/react-query": "^5.62.2",
         "@types/aws-lambda": "^8.10.149",
@@ -45,6 +46,7 @@
         "babel-plugin-styled-components": "^2.1.4",
         "bowser": "^2.11.0",
         "buffer": "^6.0.3",
+        "effect": "^3.19.14",
         "esbuild": "^0.24.0",
         "ethers": "^6.13.5",
         "jszip": "^3.10.1",
